fixed pdf overflow issue

--- a/lcc/src/less/manageLeg.less
+++ b/lcc/src/less/manageLeg.less
@@ -1,4 +1,8 @@
 .pdf-container {
+    .pdf {
+            display: block;
+    height: 100%;
+    }
     .btn-link {
         color: white;
         cursor: pointer;
